--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Js Rockets</title>
+    <script type="text/javascript">
+        console.log('hello there friends!');
+    </script>
+</head>
+<body>
+    
+</body>
+</html>
 Hello js rockets
 
-<script type="text/javascript">
-    console.log('hello there friends!');
-</script>
+
 
