--- a/index.html
+++ b/index.html
@@ -2,41 +2,13 @@
 <html>
 <head>
     <title>Js Rockets</title>
-    <script type="text/javascript">
-        var car = {
-            make: 'VW',
-            typer: 'Polo',
-            color: 'Blue',
-            isTurnedOn: false,
-            numberOfWheels: 4,
-            seats: ['seat 1',
-                'seat 2',
-                'seat 3',
-                'seat 4'
-                ],
-            turnOn: function (){
-                this.isTurnedOn = true;
-            },
-            fly: function (){
-                alert('fly');
-            },
-            switchCar: function (isOn){
-                console.log('turn car '+isOn)
-                if (isOn == true){
-                    this.isTurnedOn = tue;
-                } else {
-                    this.isTurnedOn = false;
-                }
-            }
-        };
-        
-        console.log('hello there friends!');
-    </script>
+    <script type="text/javascript" 
+        src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css"
+    href="css/style.css">
 </head>
 <body>
    <h1>hello js rocket</h1> 
+    <a href="#" onclick="sayMyName('Aaron');">CLICK ME</a>
 </body>
 </html>
-
-
-
